@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <stetic-interface>
+  <configuration>
+    <images-root-path>../</images-root-path>
+    <target-gtk-version>2.10.0</target-gtk-version>
+  </configuration>
   <import>
     <widget-library name="../../Monodoc.Editor.Gui/bin/Debug/Monodoc.Editor.Gui.dll" />
   </import>
@@ -22,6 +26,7 @@
         <property name="Label" translatable="yes">_Open</property>
         <property name="ShortLabel" translatable="yes">_Open</property>
         <property name="StockId">gtk-open</property>
+        <property name="Tooltip" translatable="yes">Open file</property>
         <signal name="Activated" handler="OnOpenActivated" />
       </action>
       <action id="Save">
@@ -30,6 +35,7 @@
         <property name="Sensitive">False</property>
         <property name="ShortLabel" translatable="yes">_Save</property>
         <property name="StockId">gtk-save</property>
+        <property name="Tooltip" translatable="yes">Save file</property>
         <signal name="Activated" handler="OnSaveActivated" />
       </action>
       <action id="SaveAs">
@@ -64,6 +70,7 @@
         <property name="Label" translatable="yes">_Copy</property>
         <property name="ShortLabel" translatable="yes">_Copy</property>
         <property name="StockId">gtk-copy</property>
+        <property name="Tooltip" translatable="yes">Copy selection</property>
         <signal name="Activated" handler="OnCopyActivated" />
       </action>
       <action id="Paste">
@@ -84,6 +91,26 @@
         <property name="ShortLabel" translatable="yes">_About</property>
         <property name="StockId">gtk-about</property>
         <signal name="Activated" handler="OnAboutActivated" />
+      </action>
+      <action id="Undo">
+        <property name="Type">Action</property>
+        <property name="Accelerator">&lt;Control&gt;z</property>
+        <property name="Label" translatable="yes">_Undo</property>
+        <property name="Sensitive">False</property>
+        <property name="ShortLabel" translatable="yes">_Undo</property>
+        <property name="StockId">gtk-undo</property>
+        <property name="Tooltip" translatable="yes">Undo last action</property>
+        <signal name="Activated" handler="OnUndoActivated" />
+      </action>
+      <action id="Redo">
+        <property name="Type">Action</property>
+        <property name="Accelerator">&lt;Control&gt;x</property>
+        <property name="Label" translatable="yes">_Redo</property>
+        <property name="Sensitive">False</property>
+        <property name="ShortLabel" translatable="yes">_Redo</property>
+        <property name="StockId">gtk-redo</property>
+        <property name="Tooltip" translatable="yes">Redo last undone action</property>
+        <signal name="Activated" handler="OnRedoActivated" />
       </action>
     </action-group>
     <property name="MemberName" />
@@ -109,6 +136,9 @@
                 <node type="Menuitem" action="Quit" />
               </node>
               <node type="Menu" action="Edit">
+                <node type="Menuitem" action="Undo" />
+                <node type="Menuitem" action="Redo" />
+                <node type="Separator" />
                 <node type="Menuitem" action="Cut" />
                 <node type="Menuitem" action="Copy" />
                 <node type="Menuitem" action="Paste" />
@@ -133,6 +163,9 @@
             <node name="toolbar1" type="Toolbar">
               <node type="Toolitem" action="Open" />
               <node type="Toolitem" action="Save" />
+              <node type="Separator" />
+              <node type="Toolitem" action="Undo" />
+              <node type="Toolitem" action="Redo" />
               <node type="Separator" />
               <node type="Toolitem" action="Cut" />
               <node type="Toolitem" action="Copy" />
